Cpp/compiling_error.txt
/Users/roharo01/OneDrive - Arm/Algorithms/Cpp/notes.cpp:21:7: error: expected expression
    A={{1, 2, 3, 4}, {5, 6, 7, 8}, {9, 10, 11, 12}};
      ^
1 error generated.
